test/asm/should-fail/002-segfault-b-short.asm
; Test for bug previously found with scan-build. Important: no CR/LF at EOF
bnz